Prepared fix for issue #1057.